# Studium_Repository

./: .gitignore  Makefile  README_KART.md  kart.py  kart_config.ini  kart_control.cpp  test_kart.py
1.Semester/Praktikum/Code/MyName/: myname.c
1.Semester/Praktikum/Code/Worm005/: worm.c
1.Semester/Praktikum/Code/Worm030/: board_model.c  prep.h  worm.c
1.Semester/Praktikum/Code/Worm050/: worm.h
1.Semester/Praktikum/Code/Worm070/: board_model.h  messages.h  worm_model.c
1.Semester/Praktikum/Code/Worm080/: board_model.c  board_model.h  worm.c
1.Semester/Praktikum/Code/Worm090/: Makefile  worm.c  worm_model.h
1.Semester/Projekte/C_Excercises/: matrix_addition.c  matrix_sub.c
1.Semester/Projekte/Studium Vorbereitung/First-C-Project/: First-C-Project.cbp  First-c-project.c
1.Semester/Projekte/Studium Vorbereitung/Snake_Game/: Snake_Game.cbp  Snake_Game.layout
2.Semester/Klausurvorbereitung_Programmieren_2/aufgabe1/: pemploy.cpp  pemploy.h
2.Semester/Klausurvorbereitung_Programmieren_2/aufgabe2/: main.cpp  pemploy.cpp  pemploy.h  person.cpp  person.h
2.Semester/Klausurvorbereitung_Programmieren_2/aufgabe3/: graph.h  line.h  main.cpp  person.cpp  rec.cpp  rec.h
2.Semester/Klausurvorbereitung_Programmieren_2/aufgabe4/: exeption.cpp  exeption.h
2.Semester/Klausurvorbereitung_Programmieren_2/aufgabe5/: quad.cpp  quad.h
2.Semester/Praktikum_Informatik_2/Aufgabe3_Interrupt/mc-praktikum/: MC_Praktikum.uvguix.alexa  MC_Praktikum.uvoptx  MC_Praktikum.uvprojx
2.Semester/Praktikum_Informatik_2/Aufgabe4_Dimmen/mc-praktikum/: MC_Praktikum.uvguix.alexa  MC_Praktikum.uvguix.alr9045  MC_Praktikum.uvoptx  main.c
2.Semester/Praktikum_Informatik_2/Aufgabe5_Frequenz/mc-praktikum/: MC_Praktikum.uvguix.alexa  MC_Praktikum.uvoptx  (+2 more)
2.Semester/Praktikum_Informatik_2/Betriebssysteme/: 17und4.c  17und4_pro_shared.c  Aufgabe1.c  Aufgabe2_colatz.c  Aufgabe3.c  Aufgabe4 copy.c  Aufgabe4.c  Bonusaufgabe_omp.c  Bonusaufgabe_omp_V2.c
2.Semester/Praktikum_Informatik_2/mc-praktikum/: MC_Praktikum.uvguix.alexa  MC_Praktikum.uvoptx  main.c  readme_display.txt
2.Semester/Praktikumsabgaben_Programmieren_2/Aufgabe 1/: pa1_utest.cpp  vertical.cpp  vertical.h
2.Semester/Praktikumsabgaben_Programmieren_2/Aufgabe2/: ballistic.cpp  ballistic.h  pa2_main.cpp  ufo.cpp  ufo.h  ufosim.cpp  ufosim.h  vertical.cpp  vertical.h
2.Semester/Praktikumsabgaben_Programmieren_2/Aufgabe2_neu/: ballistic.cpp  ballistic.h  pa2_main.cpp  pa2_utest.cpp  ufo.cpp  ufo.h  vertical.cpp  vertical.h
2.Semester/Praktikumsabgaben_Programmieren_2/Aufgabe3/: ballistic.cpp  pa3_utest.cpp  route.cpp  vertical.cpp  vertical.h
2.Semester/Praktikumsabgaben_Programmieren_2/Aufgabe4/: pa4_main.cpp  route.h  ufo.cpp  ufo.h  ufo_thread.cpp  ufo_thread.h  vertical.cpp
2.Semester/Praktikumsabgaben_Programmieren_2/Aufgabe5/: ballistic.cpp  ballistic.h  pa5.pro  route.cpp  route.h  ufo.cpp  ufo_thread.cpp  ufo_thread.h  ui_widget.h  ui_window.h  vertical.cpp
4.Semester/Echtzeitsysteme/Bonus1/: .cproject  .mxproject  .project  Bonus1 Debug.launch  Bonus1.ioc  EDF_Kurzbeschreibung.md
4.Semester/Echtzeitsysteme/BonusPeriodischesTaskset/: CMakeLists.txt  README.md  patch_ptask.py
4.Semester/Echtzeitsysteme/BonusPeriodischesTaskset/src/: main.c
4.Semester/Echtzeitsysteme/ezsys-rpisignal(2026)/: CMakeLists.txt  Dockerfile  README(2025).md  README.md
4.Semester/VerteilteSysteme/: Blatt1.c  Blatt1_Aufgabe2.c  blatt1Aufgabe2
Praktikum/Code/MyName/: a.out  myname.c
Praktikum/Code/Worm000/: worm.c
Praktikum/Code/Worm005/: .worm.c.swp
Praktikum/Code/Worm030/: worm.c  worm.h  worm_model.c
Praktikum/Code/Worm050/: board_model.c  board_model.h  worm.c  worm.h  worm_model.c  worm_model.h
Praktikum/Code/Worm070/: board_model.c  board_model.h  worm.h  worm_model.c  worm_model.h
Praktikum/Code/Worm080/: board_model.c  board_model.h  messages.c  options.c  options.h  prep.c  worm.c  worm.h  worm_model.c  worm_model.h
Praktikum/Code/Worm090/: Makefile  board_model.c  board_model.h  options.c  options.h  worm.c  worm_model.c
Projekte/C_Excercises/: matrix_test.c
Projekte/Studium Vorbereitung/Snake_Game/: Snake_Game.depend  main.c
Vorlesungscodes/: loop  loop.c
(+73 files in other folders)
